@@ -1255,6 +1255,16 @@ CREATEFUNCTION AsEWKB(geometry)
 	AS '@MODULE_FILENAME@','WKBFromLWGEOM'
 	LANGUAGE 'C' _IMMUTABLE_STRICT; -- WITH (isstrict,iscachable);
 
+CREATEFUNCTION AsHEXEWKB(geometry)
+	RETURNS TEXT
+	AS '@MODULE_FILENAME@','LWGEOM_asHEXEWKB'
+	LANGUAGE 'C' _IMMUTABLE_STRICT; -- WITH (isstrict,iscachable);
+
+CREATEFUNCTION AsHEXEWKB(geometry, text)
+	RETURNS TEXT
+	AS '@MODULE_FILENAME@','LWGEOM_asHEXEWKB'
+	LANGUAGE 'C' _IMMUTABLE_STRICT; -- WITH (isstrict,iscachable);
+
 CREATEFUNCTION AsEWKB(geometry,text)
 	RETURNS bytea
 	AS '@MODULE_FILENAME@','WKBFromLWGEOM'
