@@ -12,8 +12,9 @@ PostGIS 1.1.3CVS
 	      making those fields private later
 	- Support for build Tru64 build
 	- Use Jade for generating documentation
-	- New DumpRings() function
+	- NEW DumpRings() function
 	- BUGFIX in distance(poly,poly) giving wrong results
+	- NEW AsHEXEWKB(geom, XDR|NDR) function
 
 PostGIS 1.1.2
 2006/03/30
